# alejandra

./: .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-entry.sh  .pre-commit-hooks.yaml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  STYLE.md  alejandra.toml  asset-manifest.json  buildkite-cd.yaml  buildkite-ci.yaml  buildkite.yaml  default.nix  flake.nix  index.html  package.json  pre-commit.sh  rustfmt.toml  stats.html  treefmt.toml  tsconfig.json  vite.config.ts  vitest.config.ts
alejandra_engine/: Cargo.toml
alejandra_engine/src/: version.rs
alejandra_engine/src/rules/: bin_op.rs  key_value.rs  list.rs  mod.rs
alejandra_engine/tests/: fmt.rs
alejandra_engine/tests/cases/comment/: out
alejandra_engine/tests/cases/dynamic/: out
alejandra_engine/tests/cases/idioms_pkgs_1/: out
alejandra_engine/tests/cases/inherit/: out
alejandra_engine/tests/cases/select/: out
alejandra_engine/tests/cases/with/: out
front/: .envrc  Cargo.toml  deploy  flake.nix  package.json  serve
front/public/: index.html
front/src/: App.js  Editor.js  SideBySide.js  index.js  lib.rs  nixpkgs.js
src/alejandra/: Cargo.toml
src/alejandra/src/: annotated_children.rs  builder.rs  children.rs  children2.rs  config.rs  format.rs  formatter.rs  lib.rs  position.rs  trivia.rs  utils.rs  version.rs
src/alejandra/src/formatting_rules/: assert.rs  attribute_path.rs  binary_operation.rs  binding.rs  function_application.rs  list.rs  map.rs  mod.rs  parentheses.rs  property_access.rs  root.rs  string.rs
src/alejandra/src/parsers/: pattern.rs
src/alejandra/src/rules/: apply.rs  attr_set.rs  bin_op.rs  dynamic.rs  if_else.rs  inherit.rs  key_value.rs  lambda.rs  let_in.rs  list.rs  mod.rs  paren.rs  pat_bind.rs  pat_entry.rs  pattern.rs  root.rs  scoped.rs  string.rs
src/alejandra/tests/: fmt.rs
src/alejandra/tests/cases/apply/: in.nix  out  out-tabs.nix
src/alejandra/tests/cases/assert/: out  out-tabs.nix
src/alejandra/tests/cases/attr_set/: out  out-tabs.nix
src/alejandra/tests/cases/bin_op/: in  out  out-tabs.nix
src/alejandra/tests/cases/comment/: out  out-tabs.nix  out.nix
src/alejandra/tests/cases/dynamic/: out  out-default.nix  out-tabs.nix
src/alejandra/tests/cases/idioms/: out  out-tabs.nix
src/alejandra/tests/cases/idioms_lib_1/: out  out-tabs.nix
src/alejandra/tests/cases/idioms_lib_2/: out-tabs.nix  out.nix
src/alejandra/tests/cases/idioms_pkgs_1/: out  out-tabs.nix
src/alejandra/tests/cases/idioms_pkgs_2/: out-tabs.nix
src/alejandra/tests/cases/idioms_pkgs_3/: out-tabs.nix
src/alejandra/tests/cases/if_else/: out  out-tabs.nix
src/alejandra/tests/cases/inherit/: out  out-tabs.nix
src/alejandra/tests/cases/inherit_blank_trailing/: out-tabs.nix
src/alejandra/tests/cases/inherit_comment/: out-tabs.nix
src/alejandra/tests/cases/inherit_from/: out  out-tabs.nix
src/alejandra/tests/cases/key_value/: out  out-tabs.nix
src/alejandra/tests/cases/lambda/: out  out-default.nix  out-tabs.nix
src/alejandra/tests/cases/let_in/: out  out-default.nix  out-tabs.nix
src/alejandra/tests/cases/lists/: out  out-tabs.nix
src/alejandra/tests/cases/monsters_1/: out-tabs.nix  out.nix
src/alejandra/tests/cases/monsters_2/: out-tabs.nix  out.nix
src/alejandra/tests/cases/monsters_3/: out-default.nix  out-tabs.nix
src/alejandra/tests/cases/monsters_4/: out-default.nix  out-tabs.nix
src/alejandra/tests/cases/monsters_5/: out-tabs.nix  out.nix
src/alejandra/tests/cases/or_default/: out  out-tabs.nix
src/alejandra/tests/cases/paren/: out  out-tabs.nix
src/alejandra/tests/cases/pat_bind/: out  out-tabs.nix
src/alejandra/tests/cases/pattern/: out  out-default.nix  out-tabs.nix
src/alejandra/tests/cases/root/: out
src/alejandra/tests/cases/select/: out  out-tabs.nix
src/alejandra/tests/cases/string/: out  out-default.nix  out-tabs.nix
src/alejandra/tests/cases/string_interpol/: out  out-tabs.nix  out.nix
src/alejandra/tests/cases/with/: out  out-tabs.nix
src/alejandra/tests/indent/apply/: in.nix  out.nix
src/alejandra/tests/indent/attr_set/: out.nix
src/alejandra/tests/indent/list/: in.nix  out.nix
src/alejandra_cli/: Cargo.toml
src/alejandra_cli/src/: cli.rs  config_options.rs  find.rs  lib.rs  main.rs  verbosity.rs
src/alejandra_cli/src/ads/: contributor_thanks.txt  donation.txt  mod.rs  please_sponsor.txt  please_star.txt  sponsor_advertisement.txt  sponsor_thanks.txt  star.txt
src/alejandra_cli/tests/: cli.rs  output.txt
src/alejandra_cli/tests/configs/: wrong_key.toml
src/alejandra_engine/: Cargo.toml
src/alejandra_engine/src/: builder.rs  children.rs  children2.rs  config.rs  format.rs  lib.rs  position.rs  utils.rs  version.rs
src/alejandra_engine/src/parsers/: apply.rs  assert_or_with.rs  bin_op.rs  if_else.rs  mod.rs  pattern.rs
src/alejandra_engine/src/rules/: apply.rs  assert_and_with.rs  assert_or_with.rs  attr_set.rs  bin_op_and_or_default.rs  dynamic.rs  if_else.rs  inherit.rs  inherit_from.rs  key_value.rs  lambda.rs  let_in.rs  list.rs  mod.rs  paren.rs  pat_bind.rs  pat_entry.rs  pattern.rs  root.rs  scoped.rs  select.rs  string.rs
src/alejandra_engine/tests/: fmt.rs
src/alejandra_engine/tests/cases/apply/: in  out
src/alejandra_engine/tests/cases/assert/: out
src/alejandra_engine/tests/cases/bin_op/: out
src/alejandra_engine/tests/cases/comment/: out
src/alejandra_engine/tests/cases/if_else/: in  out
src/alejandra_engine/tests/cases/inherit/: in
src/alejandra_engine/tests/cases/key_value/: in  out
src/alejandra_engine/tests/cases/lambda/: out
src/alejandra_engine/tests/cases/or_default/: in  out
src/alejandra_engine/tests/cases/paren/: in  out
src/alejandra_engine/tests/cases/pat_bind/: out
src/alejandra_engine/tests/cases/pattern/: out
src/alejandra_engine/tests/cases/root/: out
src/alejandra_engine/tests/cases/string/: in  out
src/alejandra_engine/tests/cases/string_interpol/: out
src/alejandra_engine/tests/cases/with/: out
src/alejandra_wasm/: Cargo.toml
src/alejandra_wasm/src/: lib.rs
(+541 files in other folders)
