[profile.release]
lto = true

[profile.dev]
opt-level = 2

[[bin]]
name = "alejandra"
path = "src/main.rs"

[dependencies]
alejandra_engine = { path = "alejandra_engine" }
atty = "*"
clap = "*"
indoc = "*"
rayon = "*"
termion = "*"
tui = { version = "*", default-features = false, features = ["termion"] }
walkdir = { version = "*" }

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
description = "The Uncompromising Nix Code Formatter"
edition = "2021"
name = "alejandra_cli"
repository = "https://github.com/kamadorueda/alejandra"
version = "1.2.0"

[workspace]
members = ["alejandra_engine"]
