[dependencies]
alejandra_engine = { "path" = "../src/alejandra_engine" }
console_error_panic_hook = "*"
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = "*"
wee_alloc = "*"

[lib]
crate-type = ["cdylib"]

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
description = "The Uncompromising Nix Code Formatter"
edition = "2021"
name = "alejandra_front"
repository = "https://github.com/kamadorueda/alejandra"
version = "0.3.1"

[profile.release]
lto = true

[workspace]
