[dependencies]
nixel = { version = "5", optional = true, default_features = false, features = [
] }
rnix = { version = "0.10.2", default_features = false, features = [] }
rowan = { version = "0.12.6", default_features = false, features = [] }

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
description = "The Uncompromising Nix Code Formatter"
edition = "2021"
license = "Unlicense"
name = "alejandra"
repository = "https://github.com/kamadorueda/alejandra"
version = "3.0.0"

[features]
default = ["nixel"]
