[dependencies]
rnix = "0.10.2"
rowan = "0.12.6" # follows rnix

[target.aarch64-unknown-linux-musl.dependencies.mimalloc]
default-features = false
version = "0"

[target.arm-unknown-linux-musleabihf.dependencies.mimalloc]
default-features = false
version = "0"

[target.i686-unknown-linux-musl.dependencies.mimalloc]
default-features = false
version = "0"

[target.x86_64-unknown-linux-gnu.dependencies.mimalloc]
default-features = false
version = "0"

[target.x86_64-unknown-linux-musl.dependencies.mimalloc]
default-features = false
version = "0"

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
description = "The Uncompromising Nix Code Formatter"
edition = "2021"
license = "Unlicense"
name = "alejandra"
repository = "https://github.com/kamadorueda/alejandra"
version = "3.0.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
