[dependencies]
rnix = { version = "*", default-features = false, features = [] }
rowan = { version = "0.15.16", default-features = false, features = [] }
serde = { version = "*", default-features = false, features = ["derive"] }

[target.aarch64-unknown-linux-musl.dependencies.mimalloc]
default-features = false
version = "0"

[target.arm-unknown-linux-musleabihf.dependencies.mimalloc]
default-features = false
version = "0"

[target.i686-unknown-linux-musl.dependencies.mimalloc]
default-features = false
version = "0"

[target.x86_64-unknown-linux-gnu.dependencies.mimalloc]
default-features = false
version = "0"

[target.x86_64-unknown-linux-musl.dependencies.mimalloc]
default-features = false
version = "0"

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
description = "The Uncompromising Nix Code Formatter"
edition = "2021"
license = "Unlicense"
name = "alejandra"
readme = "../../README.md"
repository = "https://github.com/kamadorueda/alejandra"
version = "4.0.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
