[[bin]]
name = "alejandra"
path = "src/main.rs"

[dependencies]
alejandra = { path = "../alejandra" }
atty = "*"
clap = { version = "3", features = ["derive"] }
indoc = "*"
rayon = "*"
termion = "*"
tui = { version = "*", default-features = false, features = ["termion"] }
walkdir = { version = "*" }

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
description = "The Uncompromising Nix Code Formatter"
edition = "2021"
license = "Unlicense"
name = "alejandra_cli"
repository = "https://github.com/kamadorueda/alejandra"
version = "2.0.0"
