[[bin]]
name = "alejandra"
path = "src/main.rs"

[dependencies]
alejandra = { path = "../alejandra" }
clap = { version = "*", default-features = false, features = [
  "color",
  "derive",
  "std",
  "strsim",
] }
futures = { version = "*", default-features = false, features = [
  "executor",
  "thread-pool",
] }
num_cpus = { version = "*", default-features = false, features = [] }
rand = { version = "*", default-features = false, features = [
  "alloc",
  "getrandom",
] }
toml = { version = "*", default-features = false, features = ["parse"] }
walkdir = { version = "*", default-features = false, features = [] }

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
description = "The Uncompromising Nix Code Formatter"
edition = "2021"
license = "Unlicense"
name = "alejandra_cli"
repository = "https://github.com/kamadorueda/alejandra"
version = "3.1.0"
