[dependencies]
rnix = "*"
rowan = "0.12.6" # follows rnix

[target.aarch64-unknown-linux-musl.dependencies]
mimalloc = { version = "*", default-features = false }

[target.armv6l-unknown-linux-musleabihf.dependencies]
mimalloc = { version = "*", default-features = false }

[target.armv7l-unknown-linux-musleabihf.dependencies]
mimalloc = { version = "*", default-features = false }

[target.i686-unknown-linux-musl.dependencies]
mimalloc = { version = "*", default-features = false }

[target.x86_64-unknown-linux-gnu.dependencies]
mimalloc = { version = "*", default-features = false }

[target.x86_64-unknown-linux-musl.dependencies]
mimalloc = { version = "*", default-features = false }

[package]
authors = ["Kevin Amado <kamadorueda@gmail.com>"]
description = "The Uncompromising Nix Code Formatter"
edition = "2021"
name = "alejandra_engine"
repository = "https://github.com/kamadorueda/alejandra"
version = "0.6.0"
